Initial commit: Portfolio

--- a/index.html
+++ b/index.html
@@ -1,65 +1,12 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="fr">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Abdoulaye Saliou SECK - Resume</title>
-  <style>
-    body { font-family: Arial, sans-serif; line-height: 1.6; margin: 0; padding: 0; background-color: #f4f4f9; color: #333; }
-    header { background: #0056b3; color: white; padding: 20px; text-align: center; }
-    h1, h2 { margin: 0; }
-    section { margin: 20px; padding: 20px; background: white; border-radius: 8px; box-shadow: 0 2px 4px rgba(0,0,0,0.1); }
-    h3 { margin-top: 0; color: #0056b3; }
-    .skills span, .lang span { display: inline-block; background: #0056b3; color: white; margin: 5px; padding: 5px 10px; border-radius: 5px; }
-    footer { text-align: center; padding: 10px; background: #ddd; margin-top: 20px; }
-  </style>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Abdoulaye Saliou SECK - Portfolio</title>
+  <link rel="icon" href="favicon.ico" />
 </head>
 <body>
-<header>
-  <h1>Abdoulaye Saliou SECK</h1>
-  <p>Ingénieur Full Stack Sénior</p>
-  <p>Email: sailouwillbesomeone@gmail.com | Phone: +221 77 791 79 71 | <a href="https://linkedin.com/in/abdoulaye-saliou-seck" style="color: white;" target="_blank">LinkedIn</a></p>
-</header>
-
-<section>
-  <h3>Expériences Professionnelles</h3>
-  <ul>
-    <li><strong>Ingénieur Full Stack | ASSURAF INC. (05/2023 - Présent)</strong>
-      <p>Technologies: Flutter, Dart, Node.js, Express, AWS, Firebase</p>
-    </li>
-    <li><strong>Ingénieur Full Stack | SBG AFRICA (08/2022 - 05/2023)</strong>
-      <p>Technologies: Flutter, Dart, Firebase, Clean Code, Gitlab CI/CD</p>
-    </li>
-    <li><strong>Développeur Android | TÉRANGA BUSINESS SOLUTIONS (08/2021 - 08/2022)</strong>
-      <p>Technologies: Kotlin, Jetpack Compose, Retrofit, Koin</p>
-    </li>
-  </ul>
-</section>
-
-<section>
-  <h3>Formation</h3>
-  <ul>
-    <li><strong>Diplôme d'Ingénieur Technologue</strong> - 11/2021<br>École Supérieure Polytechnique de Dakar</li>
-    <li><strong>Licence Professionnelle</strong> - 07/2019<br>École Supérieure Polytechnique de Dakar</li>
-  </ul>
-</section>
-
-<section>
-  <h3>Compétences</h3>
-  <div class="skills">
-    <span>Flutter</span> <span>Node.js</span> <span>Firebase</span> <span>Spring Boot</span> <span>Java</span> <span>CI/CD</span>
-  </div>
-</section>
-
-<section>
-  <h3>Langues</h3>
-  <div class="lang">
-    <span>Français - Courant</span> <span>Anglais - Très Bien</span>
-  </div>
-</section>
-
-<footer>
-  <p>© 2024 Abdoulaye Saliou SECK | Full Stack Engineer</p>
-</footer>
+<div id="root"></div> <!-- React app mounts here -->
 </body>
 </html>
